examples/test/testpolicy14837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14837
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key40: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value44
          key43: value35
          key35: value35
      podSelector:
        matchLabels:
          key1: value32
          key42: value18
